
...
	ENHANCEMENTS
	check_nt UPTIME accepts warning/critical thresholds (Ryan Kelly)
	check_disk_smb now allows spaces in share names (#990948, #1370031, Debian #601699)
	check_http now uses standard threshold functions (enables floating point and ranges)
	check_http now checks for and prints the certificate cn (hostname) in SSL certificate checks (Stéphane Urbanovski)
	Add perfdata to check_ssh (#3244097 - Marco Beck)
	New option to check_smtp to ignore failures when sending QUIT (#3358348 - Duncan Ferguson)
	New check_by_ssh -F option which allows for specifying an alternative ssh_config(5) file (#2895334 - Sven Nierlein)
	check_sensors now detects faulty sensors unless --ignore-fault is specified (Jan Wagner)
	Updated Nagios::Plugin perl module

	FIXES
	Fix check_disk free space calculation if blocksizes differ within a disk group (Bekar - #2973603)
	check_disk_smb now handles NT_STATUS_ACCESS_DENIED properly (Debian #601696) 
	Make check_snmp work more like v1.4.14 with regard to using special values (Timeticks, STRING) as numeric thresholds
	Fix check_ldap overriding the port when --ssl was specified after -p
	Fix check_procs where regex input of '|' would get displayed in output - now replaced with ','
	Fix segfault in check_host when hostname returns multiple IP addresses (Sebastian Harl)
	Fix check_smtp and check_tcp where duplicate messages were displayed for certificate errors
	Disable RFC4507 support, to work around SSL negotiation issues with (at least) some Tomcat versions

1.4.15 27th July 2010
	ENHANCEMENTS
	New check_ntp_peer -m and -n options to check the number of usable time sources ("truechimers")
	New check_disk_smb -a option which allows for specifying the IP address of the remote server
	New check_radius -N option which allows for specifying the value of the NAS-IP-Address attribute
	New check_snmp --rate option to store differences between invocations. Saves state in PREFIX/var/{plugin}